更新 大哥国际导航.md

--- a/大哥国际导航.md
+++ b/大哥国际导航.md
@@ -6,7 +6,7 @@ https://chen-exe.github.io/dagetoliet.github.io/bank/
 https://chen-exe.github.io/dagetoliet.github.io/restaurant/
 <br>
 想看大哥游戏：
-https://chen-exe.github.io/dagetoliet.github.io/忘了/
+https://chen-exe.github.io/dagetoliet.github.io/PlayGames/
 <br>
 想看拟清朝老站：
 https://chen-exe.github.io/dagetoliet.github.io/old/index.htm
@@ -27,3 +27,5 @@ https://chen-exe.github.io/dagetoliet.github.io/toliet/viptoliet/
 想看大哥国际厕所2：
 https://chen-exe.github.io/dagetoliet.github.io/toliet/toliet2/
 
+## 大哥先生简历，ai生成。
+https://chen-exe.github.io/dagetoliet.github.io/dage/1.html
